<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingTop="5dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">


    <TextView
        android:id="@+id/tv_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />


</LinearLayout>